--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mongo"
   ],
   "main": "SimpleDbLayer.js",
-  "version": "0.3.21",
+  "version": "0.3.22",
   "private": false,
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
     "simpledeclare": "0.3.x",
     "async": "0.2.x",
     "debug": "2.x"
+  },
+  "devDependencies": {
+    "simpleschema": "0.3.x"
   }
+
 }
