--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mongo"
   ],
   "main": "SimpleDbLayer.js",
-  "version": "0.3.22",
+  "version": "0.3.23",
   "private": false,
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "simpledeclare": "0.3.x",
-    "async": "0.2.x",
-    "debug": "2.x"
+    "async": "~0.9.0",
+    "debug": "~2.1.2"
   },
   "devDependencies": {
     "simpleschema": "0.3.x"
