--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "simpledeclare": "0.3.x",
+    "eventemittercollector": "0.3.x",
     "async": "~0.9.0",
     "debug": "~2.1.2"
   },
